--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,14 @@ html {
   border: none;
 }
 
+::-moz-selection {
+  color: #fde55a;
+}
+
+::selection {
+  color: #4a57a1;
+}
+
 nav {
   display: flex;
   height: 5vh;
@@ -48,8 +56,7 @@ html.lenis body {
   height: 20vh;
   position: relative;
   border-radius: 50%;
-  transition: 0.1s;
-  transform: translate(-85%, -85%);
+  transition: 0.15s;
   pointer-events: none;
   border: 2px dotted #ffffff;
 }
@@ -58,8 +65,6 @@ html.lenis body {
   height: 0;
   width: 0;
   position: relative;
-  top: 5vw;
-  left: 5vw;
 }
 
 a {
